fix spacing in 'stay updated' section

--- a/style.css
+++ b/style.css
@@ -439,6 +439,10 @@ h4 {
   margin: 8px 0 4px;
 }
 
+.section > .icon-list {
+  margin: 0 -16px;
+}
+
 footer {
   border-style: solid none none;
   border-width: 1px;
